[tool.poetry]
name = "reticulum-server"
version = "0.1.0"
description = ""
authors = ["naman108 <natha.paquette@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
lxmf = "^0.4.4"
msgpack = "^1.0.8"
sqlalchemy = "^2.0.32"
pytest = "^8.3.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
